--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Lucasion",
   "license": "ISC",
   "dependencies": {
-    "electron": "^11.2.0"
+    "electron": "^11.2.0",
+    "lit-html": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^12.19.14"
