--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "watch": true,
     "declaration": true,
     "declarationDir": "./declarations",
-    "target": "ES6"
+    "target": "ES6",
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
